examples/test/testpolicy13292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13292
  namespace: namespace9
spec:
  podSelector:
    matchLabels:
      key20: value7
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value31
          key42: value29
          key27: value17
      podSelector:
        matchLabels:
          key22: value6
          key30: value25
